--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "project-stellaron",
+  "name": "project-hsr-tele",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hsr.irminsul.gg/",
+  "homepage": "https://hsr-arabic.vercel.app/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
