--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_URL="https://assets.irminsul.gg/hsr"
-REACT_APP_BASENAME="هونكاي العرب"
+REACT_APP_BASENAME=""
 REACT_APP_DOCUMENT_HEADER=" - هونكاي العرب"
