--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/analytics": "^1.3.2",
     "aria-query": "^5.3.2",
     "eslint": "^8.57.1",
     "gh-pages": "^4.0.0",
