--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,28 @@
     "references": [
       { "path": "./tsconfig.app.json" },
       { "path": "./tsconfig.node.json" }
-    ]
+    ],
+    
+      "compilerOptions": {
+        "baseUrl": "./",
+        "paths": {
+          "types/*": ["src/types/*"],
+          "themes/*": ["src/themes/*"]
+        },
+        "allowJs": true,
+        "checkJs": true,
+        "jsx": "react",
+        "module": "ESNext",
+        "target": "ESNext",
+        "moduleResolution": "node",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
+      },
+      "include": ["src/**/*"],
+      "exclude": ["node_modules"]
+    
+    
   }
   
