--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.3.0",
     "html-react-parser": "^5.1.18",
+    "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
+    "react-virtuoso": "^4.12.3",
     "react-xarrows": "^2.0.2"
   },
   "devDependencies": {
@@ -35,7 +37,7 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.11",
+    "vite": "^5.4.10",
     "vite-tsconfig-paths": "^5.1.3"
   }
 }
