--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@vercel/analytics": "^1.5.0",
     "html-react-parser": "^5.1.18",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
