--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-lightbox": "^5.1.4",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.0.1",
     "react-virtuoso": "^4.12.3",
     "react-xarrows": "^2.0.2"
